--- a/branches/prototypes/build_scripts_changes/release/WebStart-specific/webstart.properties
+++ b/branches/prototypes/build_scripts_changes/release/WebStart-specific/webstart.properties
@@ -19,7 +19,7 @@ webstart.codebase=http://alex73.zaval.org/snapshots/OmegaT/
 # You can create key by command:
 #  keytool -genkey -alias <alias> -keystore <keystore> 
 #  
-signkey.keystore=alex73.keystore
+signkey.keystore=e:/workspace/alex73.keystore
 signkey.alias=alex73
 signkey.storepass=alex73pass
 #signkey.keypass=alex73key
