Change settings to generics
git-svn-id: https://omegat.svn.sourceforge.net/svnroot/omegat@1335 b0d8beef-cb45-0410-a8e4-c0d495c3b779

--- a/branches/prototypes/build_scripts_changes/release/WebStart-specific/webstart.properties
+++ b/branches/prototypes/build_scripts_changes/release/WebStart-specific/webstart.properties
@@ -7,7 +7,7 @@
 # Base URL for all files for WebStart.
 # It used for fill /jnlp[@codebase] in jnlp file. 
 #
-webstart.codebase=http://alex73.zaval.org/snapshots/OmegaT/
+webstart.codebase=http://www.omegat.org/webstart/
 
 #
 # Setup key information for sign jar
@@ -19,7 +19,7 @@ webstart.codebase=http://alex73.zaval.org/snapshots/OmegaT/
 # You can create key by command:
 #  keytool -genkey -alias <alias> -keystore <keystore> 
 #  
-signkey.keystore=e:/workspace/alex73.keystore
-signkey.alias=alex73
-signkey.storepass=alex73pass
-#signkey.keypass=alex73key
+signkey.keystore=../../../OmegaT.keystore
+signkey.alias=keyname
+signkey.storepass=store_password
+#signkey.keypass=key_password
