Replace omegat.org by xxxxxx.org
git-svn-id: https://omegat.svn.sourceforge.net/svnroot/omegat@1336 b0d8beef-cb45-0410-a8e4-c0d495c3b779

--- a/branches/prototypes/build_scripts_changes/release/WebStart-specific/webstart.properties
+++ b/branches/prototypes/build_scripts_changes/release/WebStart-specific/webstart.properties
@@ -7,7 +7,7 @@
 # Base URL for all files for WebStart.
 # It used for fill /jnlp[@codebase] in jnlp file. 
 #
-webstart.codebase=http://www.omegat.org/webstart/
+webstart.codebase=http://www.xxxxxx.org/webstart/
 
 #
 # Setup key information for sign jar
