Fix webstart pack creation
git-svn-id: https://omegat.svn.sourceforge.net/svnroot/omegat@1813 b0d8beef-cb45-0410-a8e4-c0d495c3b779

--- a/branches/prototypes/new-editor/release/WebStart-specific/webstart.properties
+++ b/branches/prototypes/new-editor/release/WebStart-specific/webstart.properties
@@ -17,7 +17,7 @@ webstart.codebase=http://www.xxxxxx.org/webstart/
 #  keypass    - password for private key (you can comment out it when password equals to store password) 
 #
 # You can create key by command:
-#  keytool -genkey -alias <alias> -keystore <keystore> 
+#  keytool -genkeypair -alias <alias> -keystore <keystore> 
 #  
 signkey.keystore=../../../OmegaT.keystore
 signkey.alias=keyname
