Fix webstart pack creation
git-svn-id: https://omegat.svn.sourceforge.net/svnroot/omegat@1814 b0d8beef-cb45-0410-a8e4-c0d495c3b779

--- a/branches/prototypes/new-editor/release/WebStart-specific/webstart.properties
+++ b/branches/prototypes/new-editor/release/WebStart-specific/webstart.properties
@@ -14,7 +14,7 @@ webstart.codebase=http://www.xxxxxx.org/webstart/
 #  keystore   - keystore file
 #  alias      - key alias
 #  storepass  - password for access to keystore
-#  keypass    - password for private key (you can comment out it when password equals to store password) 
+#  keypass    - password for private key 
 #
 # You can create key by command:
 #  keytool -genkeypair -alias <alias> -keystore <keystore> 
@@ -22,4 +22,4 @@ webstart.codebase=http://www.xxxxxx.org/webstart/
 signkey.keystore=../../../OmegaT.keystore
 signkey.alias=keyname
 signkey.storepass=store_password
-#signkey.keypass=key_password
+signkey.keypass=key_password
