--- a/branches/prototypes/new-editor/release/WebStart-specific/build.xml
+++ b/branches/prototypes/new-editor/release/WebStart-specific/build.xml
@@ -15,7 +15,7 @@
         </copy>
 
         <copy todir="${root}/build/webstart">
-            <fileset dir="${root}/lib" includes="**/*.jar" />
+            <fileset dir="${root}/lib" includes="*.jar" />
             <fileset dir="${root}/lib-mnemonics/dist" includes="**/*.jar" />
             <fileset dir="${root}/dist" includes="OmegaT.jar" />
         </copy>
