--- a/branches/prototypes/gloss_n_dicts/src/org/omegat/Bundle.properties
+++ b/branches/prototypes/gloss_n_dicts/src/org/omegat/Bundle.properties
@@ -1040,6 +1040,8 @@ GUI_MATCHWINDOW_SUBWINDOWTITLE_Fuzzy_Matches=Fuzzy Matches
 
 GUI_MATCHWINDOW_SUBWINDOWTITLE_Glossary=Glossary
 
+GUI_MATCHWINDOW_SUBWINDOWTITLE_Dictionary=Dictionary
+
 # 0 - filename
 GUI_SUBWINDOWTITLE_Editor=Editor - {0}
 
