Apply directory monitoring to glossaries, fix some monitoring errors
git-svn-id: https://omegat.svn.sourceforge.net/svnroot/omegat@2106 b0d8beef-cb45-0410-a8e4-c0d495c3b779

--- a/branches/prototypes/gloss_n_dicts/src/org/omegat/logger.properties
+++ b/branches/prototypes/gloss_n_dicts/src/org/omegat/logger.properties
@@ -22,3 +22,4 @@ org.omegat.util.logging.OmegaTFileHandler.count=10
 
 # We can enable specific logging level for some classes 
 #org.omegat.core.data.SaveThread.level = FINEST
+org.omegat.util.level=FINEST
