Prototype: Some improvements for editor3
git-svn-id: https://omegat.svn.sourceforge.net/svnroot/omegat@2135 b0d8beef-cb45-0410-a8e4-c0d495c3b779

--- a/branches/prototypes/new-editor3/src/org/omegat/Bundle.properties
+++ b/branches/prototypes/new-editor3/src/org/omegat/Bundle.properties
@@ -266,9 +266,9 @@ MW_PROGRESS_TOOLTIP=File: translated / number of segments \
 # NOTE: segment start is assumed to end with "0000" string to overwrite
 # with entry number.  If zeros not detected, entry number will not be
 # displayed
-TF_CUR_SEGMENT_START=<segment 0000> 
+TF_CUR_SEGMENT_START=\u202A<segment\u00A00000>\u202C
 
-TF_CUR_SEGMENT_END=<end segment>
+TF_CUR_SEGMENT_END=\u202A<end\u00A0segment>\u202C
 
 TF_SELECT_FONTS_TITLE=Display Font
 
