--- a/branches/prototypes/gloss_n_dicts/src/org/omegat/Bundle.properties
+++ b/branches/prototypes/gloss_n_dicts/src/org/omegat/Bundle.properties
@@ -1188,5 +1188,8 @@ MATCHES_INSERT=Insert match into translation
 
 MATCHES_REPLACE=Replace translation with match
 
+# Dictionary area popup menu
+DICTIONARY_HIDE=Hide '{0}'
+
 STARTUP_ERRORBOX_TITLE=Error on application startup
 STARTUP_JAXB_LINKAGE_ERROR=You need to update your JDK 1.6 to the latest version, or just remove the jaxb-*.jar files from the OmegaT /lib dir
